# AstroBioSim

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: README.md
data/processed/: datos_atacama_2025_EXTREMOS_REALES.csv  datos_tierra_control_2025.csv  datos_ventilas_2025_procesados.csv
docs/: division-trabajo.md  flujo-trabajo.md  parametros.md  tablero.md
docs/adr/: 0001-arquitectura-dos-motores.md  0002-motor-automata-celular.md  0003-representacion-estado-y-ambiente.md  0004-framework-ui-web.md  0005-ingesta-datasets-analogicos.md  0006-motor-estocastico-montecarlo.md  0007-estructura-paquetes-repositorio.md  0008-reduccion-a-tres-variables-ambientales.md  0009-frontend-react-backend-fastapi.md  0010-ingesta-datasets-reales-2025.md  0011-especie-encelado-methanococcoides-burtonii.md  0012-tres-estados-celulares-y-separacion-de-umbrales.md  0013-cinetica-crecimiento-valores-cardinales.md  0014-radiacion-como-irradiancia-uv.md  0015-microrefugios-salmueras-y-pregunta-de-investigacion.md  README.md
docs/instrucciones/: erick.md  esmeralda.md  fidel.md  jose.md
docs/notas/: encelado-especie-psicrofila.md
openspec/: project.md
openspec/changes/bootstrap-simulator/: proposal.md
scripts/: sync_tablero.py
src/astrobiosim/core/: environment.py  microorganism.py
src/astrobiosim/data/: loaders.py  resampling.py
src/astrobiosim/engine/: cellular_automaton.py  (+1 more)
tests/integration/: test_especie_en_su_entorno.py
tests/unit/: test_environment.py  test_microorganism.py  test_resampling.py  test_smoke.py  test_stochastic.py
(+1 files in other folders)
